# MandelbrotViewer

./: .gitignore  CMakeLists.txt  README.md  complex.h  main.cpp
ext/: ThreadPool.h
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
